--- a/views/admin/attendance/attendance-faculty.ejs
+++ b/views/admin/attendance/attendance-faculty.ejs
@@ -78,7 +78,7 @@
                                      <% if(data.length){ %>
                                        <% for(let i=0; i<data.length; i++){ %>
 
-                                       <option value="<%= data[i].id  %>"><%= data[i].name  %></option>
+                                       <option value="<%= data[i].track_id  %>"><%= data[i].name  %></option>
 
                                         <% } %>
                                         <% } %>
