--- a/views/admin/report/report-student.ejs
+++ b/views/admin/report/report-student.ejs
@@ -64,7 +64,7 @@
                                     <% if(data.length){ %>
                                        <% for(let i=0; i<data.length; i++){ %>
 
-                                       <option value="<%= data[i].id  %>"><%= data[i].class_name  %></option>
+                                       <option value="<%= data[i].track_id  %>"><%= data[i].class_name  %></option>
 
                                         <% } %>
                                         <% } %>
@@ -184,7 +184,7 @@ $(document).on('change','#classes', function () {
             console.log(data);
          let option;
         for(let i=0; i<data.length; i++){
-           option += `<option value="${data[i].id}">${data[i].name}</option>`
+           option += `<option value="${data[i].track_id}">${data[i].name}</option>`
         }
              $("#studentId").html("");
              
@@ -209,7 +209,7 @@ $(document).on('click','#find', function () {
             console.log(data);
          let option;
         for(let i=0; i<data.length; i++){
-           option += `<option value="${data[i].id}">${data[i].name}</option>`
+           option += `<option value="${data[i].track_id}">${data[i].name}</option>`
         }
              $("#dataReport").html("");
              
