--- a/views/admin/faculty/faculty.ejs
+++ b/views/admin/faculty/faculty.ejs
@@ -95,7 +95,7 @@
                            <div class="row">
                               <div class="col-md-12">
                                <form action="http://thememinister.com/crm/index.html" id="facultyForm">
-                                  <input type="hidden" id="school_id" value="<%= user[0].id %>" class="form-control" name="school_id">
+                                  <input type="hidden" id="school_id" value="<%= user[0].role=='school'?user[0].track_id:user[0].track_school_id %>" class="form-control" name="school_id">
                             <div class="row">
                                 <div class="form-group col-lg-6">
                                     <label>Name</label>
