--- a/views/admin/leave-tracker/leave-faculty-tracker.ejs
+++ b/views/admin/leave-tracker/leave-faculty-tracker.ejs
@@ -100,7 +100,7 @@
                            <div class="row">
                               <div class="col-md-12">
                                 <form action="/leave/create-faculty-leave" id="leaveForm" method="post">
-                                  <input type="hidden" id="facultyId" value="<%= user[0].id %>" class="form-control" name="facultyId" >
+                                  <input type="hidden" id="facultyId" value="<%= user[0].track_id %>" class="form-control" name="facultyId" >
                             <div class="row">
                             
                                  <div class="form-group col-lg-6">
