--- a/views/admin/leave-tracker/leave-student-tracker.ejs
+++ b/views/admin/leave-tracker/leave-student-tracker.ejs
@@ -100,7 +100,7 @@
                            <div class="row">
                               <div class="col-md-12">
                                 <form action="/leave/create-student-leave" id="leaveForm1" method="post">
-                                  <input type="hidden" id="studentId" value="<%= user[0].id %>" class="form-control" name="studentId" >
+                                  <input type="hidden" id="studentId" value="<%= user[0].track_id %>" class="form-control" name="studentId" >
                             <div class="row">
                             
                                  <div class="form-group col-lg-6">
