--- a/views/admin/subject/subject.ejs
+++ b/views/admin/subject/subject.ejs
@@ -107,7 +107,7 @@
                                        <% if(data.length){ %>
                                        <% for(let i=0; i<data.length; i++){ %>
 
-                                       <option value="<%= data[i].id  %>"><%= data[i].class_name  %></option>
+                                       <option value="<%= data[i].track_id  %>"><%= data[i].class_name  %></option>
 
                                         <% } %>
                                         <% } %>
@@ -214,7 +214,15 @@
 
    <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
 
-
+document.addEventListener("click", function(event) {
+    const target = event.target;
+    if (target.classList.contains("editBtn")) {
+        editSubject(target.dataset.id);
+    } else if (target.classList.contains("deleteBtn")) {
+        deleteSubject(target.dataset.id);
+    } 
+    
+});
      
         $("#subjectForm").on("submit", async e => {
          
@@ -290,7 +298,7 @@
         console.log(data);
          let option;
         for(let i=0; i<data.classes.length; i++){
-           option += `<option value="${data.classes[i].id}"${data.data[0].class_id==data.classes[i].id?'selected':""}>${data.classes[i].class_name}</option>`
+           option += `<option value="${data.classes[i].track_id}"${data.data[0].track_class_id==data.classes[i].track_id?'selected':""}>${data.classes[i].class_name}</option>`
         }
             let formDetails = ``;
             formDetails += `<form action="/subject/update-subject-by-id" method="post">
