test series changes

--- a/views/admin/admission/admission.ejs
+++ b/views/admin/admission/admission.ejs
@@ -740,7 +740,7 @@ var dataTable = $('#sample_data').DataTable({
          }
       },
        {
-         extend: 'pdf',
+         extend: 'pdfHtml5',
         
          exportOptions: {
             columns: 'th:not(:last-child)'
