--- a/views/partials/top-bar.ejs
+++ b/views/partials/top-bar.ejs
@@ -111,7 +111,7 @@ display: none;
 </style>
          
    </head>
-   <body class="hold-transition sidebar-mini" onload="startTime()">
+   <body class="hold-transition sidebar-mini" >
       <!--preloader-->
       <div id="preloader">
          <div id="status"></div>
