--- a/views/admin/register.ejs
+++ b/views/admin/register.ejs
@@ -443,7 +443,9 @@ $('#studentaddresscheck').click(function(){
                     showConfirmButton: false,
                     timer: 2000,
                   });
-                
+                  // setTimeout(function() {
+                  //       window.location.href = '/payment'; // Replace '/new-page' with your desired route
+                  //   }, 5000);
 
                 
                 } else {
