--- a/views/admin/payment.ejs
+++ b/views/admin/payment.ejs
@@ -41,39 +41,141 @@
                      
                     <div class="panel-body">
                          
-                        <form action="/submit" id="loginForm" method="POST">
-                            <div class="form-group">
+                       
+                             <div class="form-group">
                                 <label class="control-label" for="username">Enter Number of Student</label>
-                                <input type="number" placeholder="Number of Student" title="Please enter Number of Student" required name="num_of_student" id="num_of_student" class="form-control">
+                                <input type="number" value="<%= countStudent.length %>" required name="num_of_student" id="num_of_student" disabled class="form-control">
                                
                             </div>
-                            <div class="form-group">
-                                <label class="control-label" for="password">Amount</label>
-                                <input type="number" title="Please enter Amount" placeholder="Please enter Amount" required name="amount" id="amount" class="form-control">                            
-                            </div>
-                            <div class="form-group">
+                             <div class="form-group">
                                  <label>Please Select Frequency.</label>
-                                 <select class="form-control" name="type" required>
+                                 <select class="form-control frequency" name="frequency" id="frequency" required>
                                     <option value="">Please Select Frequency</option>
                                     <option value="monthly">Monthly</option>
-                                    <option value="quartly">Quartly</option>
+                                    <option value="quarterly">Quartly</option>
                                     <option value="halfyearly">Half Yearly</option>
                                     <option value="yearly">Yearly</option>
                                  </select>
                               </div>
-                            <div align="center">
-                                <button class="btn btn-add">Pay</button>
+                            <div class="form-group">
+                                <label class="control-label" for="password">Amount</label>
+                                <input type="number" title="Please enter Amount" disabled placeholder="Please enter Amount" required name="amount" id="amount" class="form-control">                            
                             </div>
-                        </form>
+                           
+                            <div align="center">
+                                <button class="btn btn-add" id="rzp-button1">Pay</button>
+                            </div>
+                     
                         </div>
                         </div>
                 </div>
             </div>
         </div>
+        <script src="/assets/dist/js/checkout.js"></script>
         <!-- /.content-wrapper -->
-        <!-- jQuery -->
-        <script src="assets/plugins/jQuery/jquery-1.12.4.min.js" type="text/javascript"></script>
-        <!-- bootstrap js -->
-        <script src="assets/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+       <script src="assets/plugins/jQuery/jquery-1.12.4.min.js" type="text/javascript"></script>
+    <!-- bootstrap js -->
+    <script src="/assets/bootstrap/js/bootstrap.min.js" type="text/javascript"></script>
+    <!-- Your script -->
+    <script nonce="<%= nonce %>" type="text/javascript" language="javascript">
+     $(document).ready(function(){
+          $.ajax({
+                url: `/create-order`,
+                type: "post",
+                processData: false,
+                contentType: false,
+                data: {},
+                dataType: "json",
+
+                success: function (data) {
+                    console.log("kool", data);
+
+var options = {
+    "key": "rzp_test_WBioRsxhNBW8Bu", // Enter the Key ID generated from the Dashboard
+    "name": "School Payment", //your business name
+    "description": "Test Transaction",
+    "image": "https://example.com/your_logo",
+    "order_id": data.id, //This is a sample Order ID. Pass the `id` obtained in the response of Step 1
+    "handler": function (response){
+         $.ajax({
+                url: `/submit-payment`,
+                type: "post",
+              
+                data: { razorpay_payment_id:response.razorpay_payment_id,
+                   razorpay_order_id:response.razorpay_order_id,
+                   razorpay_signature:response.razorpay_signature,
+                   frequency:$('#frequency').val(),
+                   amount:$('#amount').val(),
+                  
+
+                },
+               
+
+                success: function (data) {
+                    window.location.href = `/payment-success/${data[0].track_id}`;
+                }
+            })
+       
+    },
+    "prefill": { //We recommend using the prefill parameter to auto-fill customer's contact information especially their phone number
+        "name": "Gaurav Kumar", //your customer's name
+        "email": "gaurav.kumar@example.com",
+        "contact": "9000090000" //Provide the customer's phone number for better conversion rates 
+    },
+    "notes": {
+        "address": "Razorpay Corporate Office"
+    },
+    "theme": {
+        "color": "#3399cc"
+    }
+};
+var rzp1 = new Razorpay(options);
+document.getElementById('rzp-button1').onclick = function(e){
+    rzp1.open();
+    e.preventDefault();
+}
+                }
+            })
+               
+           
+        });
+    function calculateTotalAmount(numStudents, frequency) {
+        var monthlyCharge = 10; // Assuming the charge is Rs. 10 per month per student
+        var totalAmount;
+        
+        switch (frequency) {
+            case 'monthly':
+                totalAmount = numStudents * monthlyCharge;
+                break;
+            case 'quartly':
+                totalAmount = numStudents * monthlyCharge * 3;
+                break;
+            case 'halfyearly':
+                totalAmount = numStudents * monthlyCharge * 6;
+                break;
+            case 'yearly':
+                totalAmount = numStudents * monthlyCharge * 12;
+                break;
+            default:
+                totalAmount = 0;
+        }
+        
+        return totalAmount;
+    }
+        document.addEventListener("DOMContentLoaded", function() {
+            var frequencySelect = document.getElementById("frequency");
+            if (frequencySelect) {
+                frequencySelect.addEventListener("change", function() {
+                    var numstd = document.getElementById("num_of_student").value;
+                    var numStudents = parseInt(numstd);
+                    var frequency = frequencySelect.value;
+        
+        var totalAmount = calculateTotalAmount(numStudents, frequency);
+        document.getElementById("amount").value =totalAmount;
+                });
+            }
+        });
+    </script>
     </body>
 </html>
+
